--- a/Code/RFE large selection.ipynb
+++ b/Code/RFE large selection.ipynb
@@ -435,55 +435,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "2/2 [==============================] - 0s 62ms/step - loss: 8180.1851 - val_loss: 5999.4204\n",
+      "2/2 [==============================] - 0s 55ms/step - loss: 8985.0820 - val_loss: 4818.3130\n",
       "Epoch 2/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 8150.3999 - val_loss: 6246.3457\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8662.0635 - val_loss: 4966.5044\n",
       "Epoch 3/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 8125.1870 - val_loss: 5754.5093\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8379.3047 - val_loss: 5206.3833\n",
       "Epoch 4/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 8225.3623 - val_loss: 5398.6895\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8155.5972 - val_loss: 5508.9766\n",
       "Epoch 5/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 8015.1621 - val_loss: 5468.9067\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8073.8662 - val_loss: 5898.2598\n",
       "Epoch 6/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 8005.2593 - val_loss: 5497.2905\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8080.7812 - val_loss: 6242.2417\n",
       "Epoch 7/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7955.4150 - val_loss: 5714.3438\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8104.8633 - val_loss: 6316.8501\n",
       "Epoch 8/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7914.7378 - val_loss: 5779.5767\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8121.9272 - val_loss: 6259.8726\n",
       "Epoch 9/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7878.9790 - val_loss: 5838.4946\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8079.9883 - val_loss: 6204.2944\n",
       "Epoch 10/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7854.2690 - val_loss: 5778.3579\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8055.9106 - val_loss: 6095.2437\n",
       "Epoch 11/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7787.9761 - val_loss: 5543.7266\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 8025.7959 - val_loss: 5872.9165\n",
       "Epoch 12/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7802.9375 - val_loss: 5254.6460\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7962.7373 - val_loss: 5704.0483\n",
       "Epoch 13/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7694.6089 - val_loss: 5234.7046\n",
+      "2/2 [==============================] - ETA: 0s - loss: 7347.36 - 0s 8ms/step - loss: 7958.0220 - val_loss: 5539.0278\n",
       "Epoch 14/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7634.6006 - val_loss: 5164.8633\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7905.1821 - val_loss: 5432.8281\n",
       "Epoch 15/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7582.0312 - val_loss: 5181.8848\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7880.3062 - val_loss: 5321.9492\n",
       "Epoch 16/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7515.5024 - val_loss: 5093.6714\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7850.3315 - val_loss: 5282.0376\n",
       "Epoch 17/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7446.4487 - val_loss: 5014.6860\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7805.3521 - val_loss: 5363.9585\n",
       "Epoch 18/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7390.4946 - val_loss: 4982.0352\n",
+      "2/2 [==============================] - ETA: 0s - loss: 7103.58 - 0s 16ms/step - loss: 7742.7651 - val_loss: 5426.8325\n",
       "Epoch 19/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7350.7119 - val_loss: 5016.6274\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7700.5337 - val_loss: 5395.7524\n",
       "Epoch 20/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7255.3613 - val_loss: 4746.1221\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7640.1074 - val_loss: 5487.3750\n",
       "Epoch 21/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7166.1167 - val_loss: 4583.4214\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7607.2090 - val_loss: 5433.2534\n",
       "Epoch 22/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7171.2632 - val_loss: 4559.6157\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7563.7583 - val_loss: 5168.7163\n",
       "Epoch 23/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7134.0562 - val_loss: 4156.0640\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7499.1099 - val_loss: 5088.3374\n",
       "Epoch 24/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 7036.9346 - val_loss: 4400.3408\n",
+      "2/2 [==============================] - 0s 8ms/step - loss: 7441.7290 - val_loss: 4894.3823\n",
       "Epoch 25/25\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 6895.6274 - val_loss: 4297.8789\n"
+      "2/2 [==============================] - 0s 8ms/step - loss: 7390.9165 - val_loss: 4833.2930\n"
      ]
     }
    ],
@@ -512,17 +512,17 @@
      "output_type": "stream",
      "text": [
       "true: inhibition efficiency ZE41 / %   -157\n",
-      "Name: 0, dtype: int64, predicted: -55.131\n",
+      "Name: 0, dtype: int64, predicted: -37.497\n",
       "true: inhibition efficiency ZE41 / %    39\n",
-      "Name: 5, dtype: int64, predicted: -25.727\n",
+      "Name: 5, dtype: int64, predicted: -28.104\n",
       "true: inhibition efficiency ZE41 / %    12\n",
-      "Name: 36, dtype: int64, predicted: -40.972\n",
+      "Name: 36, dtype: int64, predicted: -35.437\n",
       "true: inhibition efficiency ZE41 / %   -6\n",
-      "Name: 45, dtype: int64, predicted: -34.907\n",
+      "Name: 45, dtype: int64, predicted: -28.854\n",
       "true: inhibition efficiency ZE41 / %    38\n",
-      "Name: 13, dtype: int64, predicted: -47.428\n",
+      "Name: 13, dtype: int64, predicted: -46.810\n",
       "true: inhibition efficiency ZE41 / %   -17\n",
-      "Name: 54, dtype: int64, predicted: -33.759\n"
+      "Name: 54, dtype: int64, predicted: -32.828\n"
      ]
     }
    ],
@@ -556,50 +556,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "initial-pacific",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inhibition efficiency ZE41 / %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>-6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>-17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    inhibition efficiency ZE41 / %\n",
+       "0                             -157\n",
+       "5                               39\n",
+       "36                              12\n",
+       "45                              -6\n",
+       "13                              38\n",
+       "54                             -17"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_valid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "sunset-potential",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "counts_cols[-316]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "searching-overall",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('P_VSA_MR_5',\n",
+       " 'Mor22s',\n",
+       " 'Mor04m',\n",
+       " 'LUMO / eV',\n",
+       " 'E1p',\n",
+       " 'HOMO / eV',\n",
+       " 'P_VSA_LogP_2',\n",
+       " 'Mor29v',\n",
+       " 'MATS5v',\n",
+       " 'Mor14s',\n",
+       " 'Mor14u',\n",
+       " 'CATS3D_02_AP',\n",
+       " 'GATS5v',\n",
+       " 'MATS5m',\n",
+       " 'GATS2s')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vals_cols[:15]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "unknown-antarctica",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "126"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(list(vals_cols[:sel_no_cols]) + rf_sel)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "opposite-portland",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['P_VSA_MR_5',\n",
+       " 'Mor22s',\n",
+       " 'Mor04m',\n",
+       " 'LUMO / eV',\n",
+       " 'E1p',\n",
+       " 'HOMO / eV',\n",
+       " 'P_VSA_LogP_2',\n",
+       " 'Mor29v',\n",
+       " 'MATS5v',\n",
+       " 'Mor14s',\n",
+       " 'Mor14u',\n",
+       " 'CATS3D_02_AP',\n",
+       " 'GATS5v',\n",
+       " 'MATS5m',\n",
+       " 'GATS2s',\n",
+       " 'Mor32m',\n",
+       " 'H3m',\n",
+       " 'TDB04s',\n",
+       " 'E2s',\n",
+       " 'R5p+',\n",
+       " 'R2e+',\n",
+       " 'ISH',\n",
+       " 'DISPm',\n",
+       " 'R5i+',\n",
+       " 'Mor04i',\n",
+       " 'Ds',\n",
+       " 'Mor03s',\n",
+       " 'E2m',\n",
+       " 'Mor28s',\n",
+       " 'Mor11u',\n",
+       " 'TDB03m',\n",
+       " 'Mor19m',\n",
+       " 'VE2sign_G',\n",
+       " 'SpMAD_RG',\n",
+       " 'R3s+',\n",
+       " 'R5e+',\n",
+       " 'E2v',\n",
+       " 'Mor15i',\n",
+       " 'T(N..O)',\n",
+       " 'R2u+',\n",
+       " 'MATS8p',\n",
+       " 'Eta_epsi_5',\n",
+       " 'MATS4s',\n",
+       " 'H0v',\n",
+       " 'Hy',\n",
+       " 'E1i',\n",
+       " 'VE1sign_G',\n",
+       " 'Mor15s',\n",
+       " 'E3e',\n",
+       " 'Mor13u',\n",
+       " 'Eig03_AEA(dm)',\n",
+       " 'X4Av',\n",
+       " 'P_VSA_e_3',\n",
+       " 'Mor29e',\n",
+       " 'Mor16m',\n",
+       " 'GATS5m',\n",
+       " 'E3p',\n",
+       " 'E2e',\n",
+       " 'X3Av',\n",
+       " 'Mor19u',\n",
+       " 'GATS4s',\n",
+       " 'E3v',\n",
+       " 'TDB04m']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(vals_cols[:sel_no_cols])"
    ]
