--- a/Code/Automated run analysis.ipynb
+++ b/Code/Automated run analysis.ipynb
@@ -672,12 +672,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "gentle-donor",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('..\\\\Data\\\\rf_results.pkl', 'rb') as f:\n",
+    "with open('..\\\\Data\\\\rf_results_recalc.pkl', 'rb') as f:\n",
     "    res_dict = pickle.load(f)"
    ]
   },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "lyric-pitch",
    "metadata": {},
    "outputs": [
@@ -699,125 +699,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 'rf') loss mean\n",
-      "0.05333250686526299\n",
-      "(3, 'rf') loss std\n",
-      "0.024744345941183753\n",
-      "(3, 'rf') pred mean\n",
-      "0     -11.644418\n",
-      "5      35.222423\n",
-      "36      2.077501\n",
-      "45     26.356657\n",
-      "13    121.641020\n",
-      "54    -41.713018\n",
+      "(3, 'urs') loss mean\n",
+      "0.042841051053255794\n",
+      "(3, 'urs') loss std\n",
+      "0.01836047156607927\n",
+      "(3, 'urs') pred mean\n",
+      "0    -105.005922\n",
+      "5     -34.982453\n",
+      "36     17.640256\n",
+      "45    -69.534574\n",
+      "13    148.785855\n",
+      "54    -29.088197\n",
       "dtype: float64\n",
-      "(3, 'rf') pred std\n",
-      "0     45.985006\n",
-      "5     20.906963\n",
-      "36    25.642445\n",
-      "45    22.198172\n",
-      "13    61.366890\n",
-      "54    28.421437\n",
+      "(3, 'urs') pred std\n",
+      "0     35.575467\n",
+      "5     22.338336\n",
+      "36    24.695553\n",
+      "45    22.447706\n",
+      "13    50.814928\n",
+      "54    23.009167\n",
       "dtype: float64\n",
-      "(3, 'rfe') loss mean\n",
-      "0.029666505306959152\n",
-      "(3, 'rfe') loss std\n",
-      "0.018543837206979365\n",
-      "(3, 'rfe') pred mean\n",
-      "0    -140.430883\n",
-      "5      63.303661\n",
-      "36     34.826439\n",
-      "45    -22.284843\n",
-      "13    147.957736\n",
-      "54     19.111144\n",
+      "(5, 'urs') loss mean\n",
+      "0.04651198027655482\n",
+      "(5, 'urs') loss std\n",
+      "0.020571588697616088\n",
+      "(5, 'urs') pred mean\n",
+      "0    -100.736060\n",
+      "5     -35.975880\n",
+      "36     15.879760\n",
+      "45    -69.719165\n",
+      "13    154.621227\n",
+      "54    -30.128284\n",
       "dtype: float64\n",
-      "(3, 'rfe') pred std\n",
-      "0     33.150751\n",
-      "5     18.207593\n",
-      "36    28.932608\n",
-      "45    20.718578\n",
-      "13    52.348472\n",
-      "54    27.658377\n",
+      "(5, 'urs') pred std\n",
+      "0     39.290305\n",
+      "5     20.274173\n",
+      "36    23.809140\n",
+      "45    22.984476\n",
+      "13    56.165245\n",
+      "54    21.059042\n",
       "dtype: float64\n",
-      "(5, 'rf') loss mean\n",
-      "0.052586213173344734\n",
-      "(5, 'rf') loss std\n",
-      "0.025610854399673512\n",
-      "(5, 'rf') pred mean\n",
-      "0     -12.443432\n",
-      "5      36.881293\n",
-      "36     -2.767877\n",
-      "45     24.083744\n",
-      "13    122.729546\n",
-      "54    -40.527884\n",
+      "(63, 'urs') loss mean\n",
+      "0.04375740773975849\n",
+      "(63, 'urs') loss std\n",
+      "0.019398750255052614\n",
+      "(63, 'urs') pred mean\n",
+      "0    -104.191179\n",
+      "5     -33.716913\n",
+      "36     14.238865\n",
+      "45    -69.314514\n",
+      "13    149.626441\n",
+      "54    -28.541509\n",
       "dtype: float64\n",
-      "(5, 'rf') pred std\n",
-      "0     46.659880\n",
-      "5     18.869017\n",
-      "36    26.276059\n",
-      "45    21.399793\n",
-      "13    57.321076\n",
-      "54    30.150723\n",
-      "dtype: float64\n",
-      "(5, 'rfe') loss mean\n",
-      "0.029124097982421517\n",
-      "(5, 'rfe') loss std\n",
-      "0.01660491934808318\n",
-      "(5, 'rfe') pred mean\n",
-      "0    -138.899909\n",
-      "5      65.772058\n",
-      "36     32.875376\n",
-      "45    -19.876483\n",
-      "13    144.029941\n",
-      "54     23.678747\n",
-      "dtype: float64\n",
-      "(5, 'rfe') pred std\n",
-      "0     33.190006\n",
-      "5     19.362198\n",
-      "36    29.436711\n",
-      "45    22.357475\n",
-      "13    49.410676\n",
-      "54    31.746329\n",
-      "dtype: float64\n",
-      "(63, 'rf') loss mean\n",
-      "0.05216865622438491\n",
-      "(63, 'rf') loss std\n",
-      "0.026339212784811016\n",
-      "(63, 'rf') pred mean\n",
-      "0     -10.682136\n",
-      "5      31.910694\n",
-      "36     -3.741794\n",
-      "45     21.967358\n",
-      "13    117.044071\n",
-      "54    -41.504530\n",
-      "dtype: float64\n",
-      "(63, 'rf') pred std\n",
-      "0     51.234453\n",
-      "5     19.549449\n",
-      "36    27.688496\n",
-      "45    21.602905\n",
-      "13    55.437519\n",
-      "54    26.169364\n",
-      "dtype: float64\n",
-      "(63, 'rfe') loss mean\n",
-      "0.028964279277715832\n",
-      "(63, 'rfe') loss std\n",
-      "0.018209716274328477\n",
-      "(63, 'rfe') pred mean\n",
-      "0    -142.418804\n",
-      "5      64.897289\n",
-      "36     30.144287\n",
-      "45    -20.625978\n",
-      "13    146.926977\n",
-      "54     18.856074\n",
-      "dtype: float64\n",
-      "(63, 'rfe') pred std\n",
-      "0     32.519561\n",
-      "5     18.399786\n",
-      "36    27.202690\n",
-      "45    19.219678\n",
-      "13    53.767047\n",
-      "54    27.803282\n",
+      "(63, 'urs') pred std\n",
+      "0     35.852514\n",
+      "5     22.211504\n",
+      "36    21.755927\n",
+      "45    24.123114\n",
+      "13    56.998577\n",
+      "54    23.428690\n",
       "dtype: float64\n"
      ]
     }
@@ -831,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "capital-fifty",
    "metadata": {},
    "outputs": [
@@ -839,24 +779,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 'rf')\n",
-      "  0.0533 & -11.64 & 35.22 & 2.08 & 26.36 & 121.64 & -41.71 & \n",
-      "  $\\pm$ 0.0247 & $\\pm$ 45.99 & $\\pm$ 20.91 & $\\pm$ 25.64 & $\\pm$ 22.20 & $\\pm$ 61.37 & $\\pm$ 28.42 & \n",
-      "(3, 'rfe')\n",
-      "  0.0297 & -140.43 & 63.30 & 34.83 & -22.28 & 147.96 & 19.11 & \n",
-      "  $\\pm$ 0.0185 & $\\pm$ 33.15 & $\\pm$ 18.21 & $\\pm$ 28.93 & $\\pm$ 20.72 & $\\pm$ 52.35 & $\\pm$ 27.66 & \n",
-      "(5, 'rf')\n",
-      "  0.0526 & -12.44 & 36.88 & -2.77 & 24.08 & 122.73 & -40.53 & \n",
-      "  $\\pm$ 0.0256 & $\\pm$ 46.66 & $\\pm$ 18.87 & $\\pm$ 26.28 & $\\pm$ 21.40 & $\\pm$ 57.32 & $\\pm$ 30.15 & \n",
-      "(5, 'rfe')\n",
-      "  0.0291 & -138.90 & 65.77 & 32.88 & -19.88 & 144.03 & 23.68 & \n",
-      "  $\\pm$ 0.0166 & $\\pm$ 33.19 & $\\pm$ 19.36 & $\\pm$ 29.44 & $\\pm$ 22.36 & $\\pm$ 49.41 & $\\pm$ 31.75 & \n",
-      "(63, 'rf')\n",
-      "  0.0522 & -10.68 & 31.91 & -3.74 & 21.97 & 117.04 & -41.50 & \n",
-      "  $\\pm$ 0.0263 & $\\pm$ 51.23 & $\\pm$ 19.55 & $\\pm$ 27.69 & $\\pm$ 21.60 & $\\pm$ 55.44 & $\\pm$ 26.17 & \n",
-      "(63, 'rfe')\n",
-      "  0.0290 & -142.42 & 64.90 & 30.14 & -20.63 & 146.93 & 18.86 & \n",
-      "  $\\pm$ 0.0182 & $\\pm$ 32.52 & $\\pm$ 18.40 & $\\pm$ 27.20 & $\\pm$ 19.22 & $\\pm$ 53.77 & $\\pm$ 27.80 & \n"
+      "(3, 'urs')\n",
+      "  0.0428 & -105.01 & -34.98 & 17.64 & -69.53 & 148.79 & -29.09 & \n",
+      "  $\\pm$ 0.0184 & $\\pm$ 35.58 & $\\pm$ 22.34 & $\\pm$ 24.70 & $\\pm$ 22.45 & $\\pm$ 50.81 & $\\pm$ 23.01 & \n",
+      "(5, 'urs')\n",
+      "  0.0465 & -100.74 & -35.98 & 15.88 & -69.72 & 154.62 & -30.13 & \n",
+      "  $\\pm$ 0.0206 & $\\pm$ 39.29 & $\\pm$ 20.27 & $\\pm$ 23.81 & $\\pm$ 22.98 & $\\pm$ 56.17 & $\\pm$ 21.06 & \n",
+      "(63, 'urs')\n",
+      "  0.0438 & -104.19 & -33.72 & 14.24 & -69.31 & 149.63 & -28.54 & \n",
+      "  $\\pm$ 0.0194 & $\\pm$ 35.85 & $\\pm$ 22.21 & $\\pm$ 21.76 & $\\pm$ 24.12 & $\\pm$ 57.00 & $\\pm$ 23.43 & \n"
      ]
     }
    ],
